--- a/styles.css
+++ b/styles.css
@@ -132,25 +132,25 @@ input::placeholder {
 .container {
   flex: 1;
 
-  margin: 0px 8vw;
+  margin: 0px 15vw;
 
   display: flex;
   justify-content: center;
 }
 
 .left-container {
-  flex: 1;
+  padding: 24px;
+
+  flex: 3;
 
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-
-  padding: 24px;
   gap: 20px;
 }
 
 .right-container {
-  min-width: 20vw;
+  flex: 1;
 
   display: flex;
   flex-direction: column;
@@ -168,9 +168,8 @@ input::placeholder {
 }
 
 .video {
-  width: 1280px;
+  width: 100%;
   height: 720px;
-  max-width: 65vw;
   max-height: 55vh;
 
   border: 0;
