--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
   margin: 0;
 
   background-color: rgb(24, 23, 23);
-  color: aliceblue;
+  color: white;
 
   display: flex;
   flex-direction: column;
@@ -150,7 +150,7 @@ input::placeholder {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 20px;
+  gap: 24px;
 }
 
 .right-container {
@@ -180,7 +180,7 @@ input::placeholder {
 }
 
 /*
-    primary info
+    primary info styling
 */
 
 .primary-info {
@@ -189,10 +189,13 @@ input::placeholder {
   border-bottom: 1px solid rgb(66, 66, 66);
 }
 
-.link-tags {
+a {
   color: #3ea6ff;
-  font-size: 12px;
   text-decoration: none;
+}
+
+.link-tags {
+  font-size: 12px;
 
   margin-right: 1px;
 }
@@ -248,4 +251,132 @@ input::placeholder {
   display: flex;
   gap: 5px;
   align-items: center;
+}
+
+/*
+    secondary info styling
+*/
+
+.secondary-info {
+  width: 100%;
+
+  padding-bottom: 16px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+
+  border-bottom: 1px solid rgb(66, 66, 66);
+}
+
+.secondary-info-top-bar {
+  width: 100%;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.channel-logo-container {
+  width: 64px;
+  height: 50px;
+}
+
+.channel-logo {
+  border-radius: 50%;
+}
+
+.channel-name {
+  flex: 1;
+
+  font-size: 14px;
+}
+
+.subscribe-btn {
+  background-color: #cc0000;
+  margin: 0px 4px;
+  padding: 10px 16px;
+
+  border: 0;
+  border-radius: 4px;
+
+  color: white;
+}
+
+.secondary-info-desc {
+  margin-left: 64px;
+
+  font-size: 14px;
+}
+
+.more-btn {
+  margin-top: 8px;
+
+  font-size: 12px;
+  color: #aaaaaa;
+}
+
+/*
+    Comments header styling
+*/
+
+.comments-header {
+  width: 100%;
+
+  display: flex;
+  flex-direction: column;
+
+  margin-bottom: 24px;
+}
+
+.comments-info {
+  width: 100%;
+
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+
+  margin-bottom: 24px;
+}
+
+.comments-info-summary {
+  margin-right: 32px;
+
+  font-size: 16px;
+}
+
+#sort-icon {
+  margin-right: 8px;
+}
+
+.sort-icon-label {
+  font-size: 14px;
+}
+
+.comments-input {
+  width: 100%;
+
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.comment-box {
+  flex: 1;
+}
+
+#account-icon-2 {
+  width: 55px;
+  height: 40px;
+  font-size: 40px;
+}
+
+.comment-box {
+  background-color: transparent;
+  border: 0;
+  border-bottom: 2px solid #494848;
+
+  font-size: 11pt;
+  color: white;
 }
