--- a/styles.css
+++ b/styles.css
@@ -142,13 +142,24 @@ input::placeholder {
 .container {
   flex: 1;
 
-  margin: 0px 10vw;
-
   display: flex;
   justify-content: center;
 }
 
+@media screen and (min-width: 2100px) {
+  .container {
+    margin: 0px 15vw;
+  }
+}
+
+@media screen and (max-width: 2100px) {
+  .container {
+    margin: 0px 1vw;
+  }
+}
+
 .left-container {
+  max-width: 1280;
   padding: 24px;
 
   flex: 3;
@@ -496,4 +507,49 @@ a {
 .pinned-by-text {
   color: #aaaaaa;
   font-size: 12px;
+}
+
+/*
+    Watch next column styling
+*/
+
+.watch-next {
+  display: flex;
+}
+
+.watch-next-thumbnail {
+  width: 168px;
+  height: 94px;
+
+  margin-right: 8px;
+}
+
+.watch-next-summary {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+
+  gap: 2px;
+}
+
+.watch-next-title {
+  width: 200px;
+
+  font-size: 14px;
+  color: white;
+  margin-bottom: 4px;
+
+  overflow: hidden;
+  text-overflow: ellipsis;
+
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+}
+
+.watch-next-channel,
+.watch-next-metadata {
+  font-size: 12px;
+  color: #aaaaaa;
 }
